publish: Show ID's in items. Require an identifier for API.
generated from commit a7471e1bc9057306e7af37f9360eeb2636688012

--- a/index.html
+++ b/index.html
@@ -2464,7 +2464,8 @@ The bill&rsquo;s <code class="prettyprint">payDate</code> is the date in which t
 <p>Sample Request</p>
 </blockquote>
 <pre class="highlight json"><code><span class="p">{</span><span class="w">
-  </span><span class="nt">"apiKey"</span><span class="p">:</span><span class="w"> </span><span class="s2">"dc220490-e6ee-11e5-8a94-e7385a8d929e"</span><span class="w">
+  </span><span class="nt">"apiKey"</span><span class="p">:</span><span class="w"> </span><span class="s2">"dc220490-e6ee-11e5-8a94-e7385a8d929e"</span><span class="p">,</span><span class="w">
+  </span><span class="nt">"identifier"</span><span class="p">:</span><span class="w"> </span><span class="s2">"unique-user-id"</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
 
@@ -2493,6 +2494,10 @@ The bill&rsquo;s <code class="prettyprint">payDate</code> is the date in which t
 <tr>
 <td><code class="prettyprint">clientId</code></td>
 <td>The ID to be used with requests.</td>
+</tr>
+<tr>
+<td><code class="prettyprint">identifier</code></td>
+<td>A unique identifier that represents a user in your system.</td>
 </tr>
 </tbody></table>
 
