--- a/index.html
+++ b/index.html
@@ -2269,6 +2269,8 @@ The bill&rsquo;s <code class="prettyprint">payDate</code> is the date in which t
     "meta": {
       "firstName": "Sean",
       "lastName": "Hill",
+      "email": "sean@hill.com",
+      "phone": "4801428531",
       "address1": "123 Api St.",
       "address2": "P.O. Box 283",
       "city": "Mesa",
@@ -2327,6 +2329,8 @@ The bill&rsquo;s <code class="prettyprint">payDate</code> is the date in which t
     "meta": {
       "firstName": "Sean",
       "lastName": "Hill",
+      "email": "sean@hill.com",
+      "phone": "4801428531",
       "address1": "123 Api St.",
       "address2": "P.O. Box 283",
       "city": "Mesa",
