--- a/index.html
+++ b/index.html
@@ -2766,7 +2766,7 @@ When an interesting event occurs, we create a new <code>Event</code> object. For
 </thead><tbody>
 <tr>
 <td><code>type</code></td>
-<td><code>bill.payment.sent</code></td>
+<td><code>bill.payment.failed</code></td>
 </tr>
 <tr>
 <td><code>payload.data.company</code></td>
