publish: Copy update
generated from commit a46ce3a5b710378695141548322371f3f01ae097

--- a/index.html
+++ b/index.html
@@ -2774,7 +2774,7 @@ When an interesting event occurs, we create a new <code>Event</code> object. For
 </tr>
 <tr>
 <td><code>payload.data.amount</code></td>
-<td>The amount attempted to be sent to the company.</td>
+<td>The amount of the unsuccesful payment.</td>
 </tr>
 </tbody></table>
 
