--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ https://sb.unbill.co/v1 (sandbox)
 <h2 id='biller-direct'>Biller Direct</h2>
 <p><img src="https://www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_spend.gif" alt="Biller Direct" /></p>
 
-<p>Biller Direct is a new, card-enabled bill pay solution designed to dramatically improve the user experience and economic model of bill pay.</p>
+<p>Biller Direct is a card-enabled bill pay solution designed to dramatically improve the user experience and economic model of bill pay.</p>
 <h1 id='auth'>Auth</h1><h2 id='the-auth-object'>The auth object</h2>
 <blockquote>
 <p>Example Response</p>
