--- a/index.html
+++ b/index.html
@@ -467,14 +467,20 @@ https://sb.unbill.co/v1 (sandbox)
 <p>Connect is a drop-in module that provides a secure, elegant authentication flow for each company that the Q2 Biller Direct API supports. Connect makes it secure and easy for clients to link their accounts, while doing the heavy lifting for the authentication.</p>
 
 <p>Connect will emit events back to your app when a client successfully authenticates, exits, or times out.</p>
+
+<p><a href="https://connect.unbill.us">View demo</a></p>
 <h2 id='cardswap'>CardSwap</h2>
 <p><img src="https://www.q2ebanking.com/img/pages/q2_open/cardswap/cardswap_select.gif" alt="CardSwap" /></p>
 
 <p>Q2 CardSwap™ is the first switch kit for subscription and eCommerce merchants, allowing users to put your card top-of-wallet for their favorite services—all in one place.</p>
+
+<p><a href="https://cardswap.unbill.us">View demo</a></p>
 <h2 id='biller-direct'>Biller Direct</h2>
 <p><img src="https://www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_spend.gif" alt="Biller Direct" /></p>
 
 <p>Biller Direct is a card-enabled bill pay solution designed to dramatically improve the user experience and economic model of bill pay.</p>
+
+<p><a href="https://biller-direct.unbill.us">View demo</a></p>
 <h1 id='auth'>Auth</h1><h2 id='the-auth-object'>The auth object</h2>
 <blockquote>
 <p>Example Response</p>
