--- a/index.html
+++ b/index.html
@@ -376,6 +376,38 @@ https://sb.unbill.co/v1 (sandbox)
     ));
   }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
 </script>
+<h3 id='test-company'>Test Company</h3>
+<p>You may perform an authentication with a company named <em>Test Merchant</em> with <code>5bd885fccd274b4324a21f57</code> as it&#39;s <code>_id</code> that can be used to test various use cases. Each use case is triggered based on the <code>username</code> used to authenticate. Any password may be used. Here&#39;s a list of usernames and their associated test case:</p>
+<h3 id='test-credentials'>Test Credentials</h3>
+<table><thead>
+<tr>
+<th>Username</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code>test</code></td>
+<td>Test a successful authentication.</td>
+</tr>
+<tr>
+<td><code>testfail</code></td>
+<td>Test an authentication failure.</td>
+</tr>
+<tr>
+<td><code>testmfaquestion</code></td>
+<td>Test an authentication requiring question-based MFA.</td>
+</tr>
+<tr>
+<td><code>testmfacode</code></td>
+<td>Test an authentication requiring code-based MFA.</td>
+</tr>
+<tr>
+<td><code>testpaymentfail</code></td>
+<td>Test a payment failure.</td>
+</tr>
+</tbody></table>
+
+<p>You may test a successful payment within the Sandbox environment by using <code>4111111111111111</code> as the card number, with any valid expiration, zipcode, and random 3-digit CVV.</p>
 <h2 id='gaining-access'>Gaining Access</h2>
 <p>To gain access to the Q2 Biller Direct API, please <a href="mailto:api@unbill.us">contact us</a>. After our review process is complete, you&#39;ll be provided with an API key which you can use for your requests.</p>
 <h2 id='authentication'>Authentication</h2>
@@ -481,25 +513,135 @@ https://sb.unbill.co/v1 (sandbox)
 <li>SSO into the white-label product by passing in the token as a URL parameter. An example URL would look like this: <code>https://product.unbill.us?token=123</code>.</li>
 </ol>
 <h2 id='connect'>Connect</h2>
+<blockquote>
+<p>Host
+<code>
+https://connect.unbill.us (production)
+https://sb-connect.unbill.us (sandbox)
+</code></p>
+</blockquote>
+
 <p><img src="https://www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_add-bills.gif" alt="Connect" /></p>
 
 <p>Connect is a drop-in module that provides a secure, elegant authentication flow for each company that the Q2 Biller Direct API supports. Connect makes it secure and easy for clients to link their accounts, while doing the heavy lifting for the authentication.</p>
 
-<p>Connect will emit events back to your app when a client successfully authenticates, exits, or times out.</p>
-
 <p><a href="https://connect.unbill.us">View demo</a></p>
+<h3 id='events'>Events</h3>
+<p>Connect will emit events back to your app using the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage">postMessage</a> API or <a href="https://developer.apple.com/documentation/webkit/wkscriptmessagehandler">WKScriptMessageHandler</a> on iOS, allowing you to decide what to do after the user is finished.</p>
+
+<table><thead>
+<tr>
+<th>Event</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code>auth</code></td>
+<td>The user successfully authenticated with a company.</td>
+</tr>
+<tr>
+<td><code>close</code></td>
+<td>The user closed the module without completing an authentication.</td>
+</tr>
+<tr>
+<td><code>alive</code></td>
+<td>Emitted every 30 seconds to indicate that the user is not idle.</td>
+</tr>
+</tbody></table>
+<h3 id='url-parameters'>URL parameters</h3>
+<p>The following URL parameters can be optionally passed into the Connect URL to customize the experience.</p>
+
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code>companyId</code></td>
+<td>Deeplink to a specific <code>companyId</code>, skipping the search screen.</td>
+</tr>
+<tr>
+<td><code>cardPaymentsOnly</code></td>
+<td>Limit searches to companies that support card-based payments.</td>
+</tr>
+<tr>
+<td><code>items</code></td>
+<td><em>CardSwap only:</em> Can be set to <code>swap</code> to automatically create a <a href="#swap">Swap</a> once an authentication is successful.</td>
+</tr>
+<tr>
+<td><code>paymentMethodId</code></td>
+<td><em>CardSwap only:</em> Sets a previously added payment method to be used for a swap once an authentication is successful.</td>
+</tr>
+</tbody></table>
 <h2 id='cardswap'>CardSwap</h2>
+<blockquote>
+<p>Host
+<code>
+https://cardswap.unbill.us (production)
+https://sb-cardswap.unbill.us (sandbox)
+</code></p>
+</blockquote>
+
 <p><img src="https://www.q2ebanking.com/img/pages/q2_open/cardswap/cardswap_select.gif" alt="CardSwap" /></p>
 
 <p>Q2 CardSwap™ is the first switch kit for subscription and eCommerce merchants, allowing users to put your card top-of-wallet for their favorite services—all in one place.</p>
 
 <p><a href="https://cardswap.unbill.us">View demo</a></p>
 <h2 id='biller-direct'>Biller Direct</h2>
+<blockquote>
+<p>Host
+<code>
+https://biller-direct.unbill.us (production)
+https://sb-biller-direct.unbill.us (sandbox)
+</code></p>
+</blockquote>
+
 <p><img src="https://www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_spend.gif" alt="Biller Direct" /></p>
 
 <p>Biller Direct is a card-enabled bill pay solution designed to dramatically improve the user experience and economic model of bill pay.</p>
 
 <p><a href="https://biller-direct.unbill.us">View demo</a></p>
+<h3 id='events'>Events</h3>
+<p>Biller Direct will emit events back to your app using the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage">postMessage</a> API or <a href="https://developer.apple.com/documentation/webkit/wkscriptmessagehandler">WKScriptMessageHandler</a> on iOS, allowing you to decide what to do after the user is finished.</p>
+
+<table><thead>
+<tr>
+<th>Event</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code>alive</code></td>
+<td>Emitted every 30 seconds to indicate that the user is not idle.</td>
+</tr>
+</tbody></table>
+<h3 id='url-parameters'>URL parameters</h3>
+<p>The following URL parameters can be optionally passed into the Biller Direct URL to customize the experience.</p>
+
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code>companyId</code></td>
+<td>Deeplink to a specific bill for the <code>companyId</code> specified if a bill already exists, or fallback to the authentication screen for the specified <code>companyId</code>.</td>
+</tr>
+<tr>
+<td><code>billId</code></td>
+<td>Setting to a specific <a href="#bill">Bill</a> <code>_id</code> will deeplink the user into the detailed view of the bill.</td>
+</tr>
+<tr>
+<td><code>skipOnboarding</code></td>
+<td>Setting to <code>true</code> will skip the introductary screens and animations.</td>
+</tr>
+<tr>
+<td><code>cardPaymentsOnly</code></td>
+<td>Limit searches to companies that support card-based payments.</td>
+</tr>
+</tbody></table>
 <h1 id='auth'>Auth</h1><h2 id='the-auth-object'>The auth object</h2>
 <blockquote>
 <p>Example Response</p>
